--- a/Retofit2/app/src/main/res/layout/activity_cart.xml
+++ b/Retofit2/app/src/main/res/layout/activity_cart.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.CartActivity">
+    tools:context=".activity.CartActivity">
 
     <!-- First LinearLayout -->
     <LinearLayout
@@ -53,7 +53,7 @@
         app:layout_constraintTop_toBottomOf="@id/linearLayout">
 
         <CheckBox
-            android:id="@+id/selectProductCheckbox"
+            android:id="@+id/selectAllCheckbox"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginStart="10dp" />
@@ -98,20 +98,20 @@
             android:id="@+id/totalAmountText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
             android:text="Total Amount: $29.00"
             android:textSize="20sp"
-            android:layout_marginTop="8dp"/>
+            android:textStyle="bold" />
     </LinearLayout>
 
     <!-- Shipping Button -->
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/shippingButton"
         android:layout_width="match_parent"
         android:layout_height="55dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginBottom="36dp"
         android:background="@drawable/round_back_primary_15"
         android:text="Shipping"
         android:textAllCaps="false"
@@ -120,7 +120,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
