--- a/Retofit2/app/src/main/res/layout/address_delivery_item.xml
+++ b/Retofit2/app/src/main/res/layout/address_delivery_item.xml
@@ -43,7 +43,8 @@
                 android:text="|"
                 android:textSize="16sp"
                 android:textStyle="normal"
-                android:textColor="#808080"/>
+                android:textColor="#808080"
+                />
             <!-- TextView cho số điện thoại -->
             <TextView
                 android:id="@+id/phoneNumber"
@@ -51,9 +52,9 @@
                 android:layout_height="wrap_content"
                 android:text="(+84) 859 716 818"
                 android:textSize="16sp"
-                android:textStyle="normal"
+                android:textStyle="bold"
                 android:layout_marginStart="8dp"
-                android:textColor="#808080"/>
+                />
         </LinearLayout>
 
         <TextView
