Complete UI and Call API

--- a/Retofit2/app/src/main/res/layout/activity_payment.xml
+++ b/Retofit2/app/src/main/res/layout/activity_payment.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
+    android:id="@+id/mainLayout"
     >
 
     <!-- First LinearLayout -->
@@ -146,7 +147,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/productRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="391dp"
+        android:layout_height="328dp"
         android:layout_marginBottom="16dp"
         android:orientation="vertical" />
     <!-- Tổng cộng và tiết kiệm -->
@@ -164,13 +165,6 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:orientation="vertical">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Tổng cộng"
-                android:textColor="@android:color/darker_gray"
-                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/totalAmountText"
@@ -191,10 +185,10 @@
     <Button
         android:id="@+id/placeOrderButton"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="63dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#FF5722"
         android:text="Đặt hàng"
         android:textColor="@android:color/white"
-        android:backgroundTint="#FF5722"
-        android:textStyle="bold"
-        android:layout_marginTop="16dp"/>
+        android:textStyle="bold" />
 </LinearLayout>
