--- a/Retofit2/app/src/main/res/layout/product_item_payment.xml
+++ b/Retofit2/app/src/main/res/layout/product_item_payment.xml
@@ -29,8 +29,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Tên sản phẩm"
-            android:textSize="14sp"
+            android:textSize="17sp"
             android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/productColor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Màu sắc"
+            android:textSize="14sp"
+            android:textStyle="normal"/>
 
         <TextView
             android:layout_marginTop="20dp"
