--- a/Retofit2/app/src/main/res/layout/forget_password.xml
+++ b/Retofit2/app/src/main/res/layout/forget_password.xml
@@ -3,11 +3,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".Activity.ForgetPassword">
+    tools:context=".activity.ForgetPassword">
     <!--wrap content: chieu rong cua view se vua du de chua noi dung ben trong no  -->
     <!--wrap_parent: Chieu rong keo gian het muc co the trong layout cha    -->
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:layout_marginTop="5dp"
+        >
+
+        <ImageButton
+            android:id="@+id/backIcon"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:adjustViewBounds="true"
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="10dp"
+            android:background="@android:color/transparent"
+            android:scaleType="centerInside"
+            android:src="@drawable/arrows" />
+    </LinearLayout>
 
     <ImageView
         android:layout_width="wrap_content"
