--- a/Retofit2/app/src/main/res/values/ids.xml
+++ b/Retofit2/app/src/main/res/values/ids.xml
@@ -3,4 +3,5 @@
     <item name="cartIcon" type="id" />
     <item name="google_btn" type="id" />
     <item name="emailIcon" type="id" />
+    <item name="productDetail" type="id" />
 </resources>
