--- a/Retofit2/app/src/main/res/layout/activity_login.xml
+++ b/Retofit2/app/src/main/res/layout/activity_login.xml
@@ -3,11 +3,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:orientation="vertical"
     >
         <!--wrap content: chieu rong cua view se vua du de chua noi dung ben trong no  -->
         <!--wrap_parent: Chieu rong keo gian het muc co the trong layout cha    -->
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:layout_marginTop="5dp"
+        >
+
+        <ImageButton
+            android:id="@+id/backIcon"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:adjustViewBounds="true"
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="10dp"
+            android:background="@android:color/transparent"
+            android:scaleType="centerInside"
+            android:src="@drawable/arrows" />
+    </LinearLayout>
+
 
     <TextView
         android:layout_width="wrap_content"
@@ -15,6 +36,7 @@
         android:layout_gravity="center"
         android:text="Sign In"
         android:textColor="#000000"
+        android:layout_marginTop="80dp"
         android:textSize="30sp"
         android:textStyle="bold" />
 
@@ -194,12 +216,13 @@
             android:textStyle="bold" />
     </RelativeLayout>
 
-    
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
+        android:layout_marginStart="100dp"
         android:layout_marginTop="40dp"
         >
         <TextView
