--- a/Retofit2/app/src/main/res/layout/cart_item_layout.xml
+++ b/Retofit2/app/src/main/res/layout/cart_item_layout.xml
@@ -28,6 +28,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginEnd="16dp"
+            android:scaleType="fitCenter"
             android:src="@drawable/iphone1" />
 
         <!-- Product Info (Name & Price) -->
@@ -123,15 +124,16 @@
                     android:adjustViewBounds="true"
                     android:background="@android:color/transparent" />
             </LinearLayout>
+
             <TextView
                 android:id="@+id/message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:text="Hết hàng"
-                android:textStyle="normal"
+                android:textColor="#F40D0D"
                 android:textSize="17dp"
-                android:textColor="#F40D0D" />
+                android:textStyle="normal" />
         </LinearLayout>
 
     </LinearLayout>
