--- a/Retofit2/app/src/main/res/layout/color_option_item.xml
+++ b/Retofit2/app/src/main/res/layout/color_option_item.xml
@@ -12,7 +12,7 @@
         android:id="@+id/colorImage"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:scaleType="centerCrop"
+        android:scaleType="fitCenter"
         android:src="@drawable/iphone1" />
 
     <TextView
