--- a/Retofit2/app/src/main/res/layout/customer_home_product_item.xml
+++ b/Retofit2/app/src/main/res/layout/customer_home_product_item.xml
@@ -18,7 +18,7 @@
             android:id="@+id/product_image"
             android:layout_width="190dp"
             android:layout_height="190dp"
-            android:scaleType="centerCrop"
+            android:scaleType="fitCenter"
             android:src="@drawable/images" />
 
         <TextView
