--- a/Retofit2/app/src/main/res/layout/customer_order_item_home.xml
+++ b/Retofit2/app/src/main/res/layout/customer_order_item_home.xml
@@ -33,6 +33,7 @@
                 android:src="@drawable/delivery"
                 android:layout_marginEnd="10dp"
                 android:layout_marginStart="10dp"
+                android:scaleType="fitCenter"
                 android:layout_gravity="top"/>
 
             <!-- Layout dọc chứa 2 TextView -->
@@ -78,7 +79,7 @@
                 android:layout_height="90dp"
                 android:layout_marginTop="0dp"
                 android:layout_marginBottom="16dp"
-                android:scaleType="centerCrop"/>
+                android:scaleType="fitCenter"/>
 
             <!-- Thông tin sản phẩm bên phải -->
             <LinearLayout
