--- a/Retofit2/app/src/main/res/layout/dialog_feedback.xml
+++ b/Retofit2/app/src/main/res/layout/dialog_feedback.xml
@@ -11,6 +11,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center_horizontal"
+        android:scaleType="fitCenter"
         android:src="@drawable/livechat" />
 
     <!-- Tên sản phẩm -->
