--- a/Retofit2/app/src/main/res/layout/dialog_order_details.xml
+++ b/Retofit2/app/src/main/res/layout/dialog_order_details.xml
@@ -24,7 +24,7 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_gravity="center"
-        android:scaleType="centerCrop"
+        android:scaleType="fitCenter"
         android:src="@drawable/livechat" />
 
     <!-- Mã đơn hàng -->
