--- a/Retofit2/app/src/main/res/layout/image_item.xml
+++ b/Retofit2/app/src/main/res/layout/image_item.xml
@@ -9,5 +9,6 @@
             android:id="@+id/itemImage"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:scaleType="centerCrop" />
+            android:scaleType="fitCenter"
+            />
 </LinearLayout>
