--- a/Retofit2/app/src/main/res/layout/item_feedback_image.xml
+++ b/Retofit2/app/src/main/res/layout/item_feedback_image.xml
@@ -3,5 +3,5 @@
     android:layout_width="100dp"
     android:layout_height="100dp"
     android:layout_margin="8dp"
-    android:scaleType="centerCrop"
+    android:scaleType="fitCenter"
     android:src="@drawable/livechat" />
