--- a/Retofit2/app/src/main/res/layout/item_phone.xml
+++ b/Retofit2/app/src/main/res/layout/item_phone.xml
@@ -11,7 +11,7 @@
         android:id="@+id/image_phone"
         android:layout_width="match_parent"
         android:layout_height="120dp"
-        android:scaleType="centerCrop"
+        android:scaleType="fitCenter"
         android:padding="20dp"/>
 
 
