--- a/Retofit2/app/src/main/res/layout/layout_bottom_sheet_cart.xml
+++ b/Retofit2/app/src/main/res/layout/layout_bottom_sheet_cart.xml
@@ -16,8 +16,9 @@
             android:id="@+id/productImage"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:scaleType="fitCenter"
             android:src="@drawable/iphone1"
-            android:scaleType="centerCrop" />
+            />
 
         <LinearLayout
             android:layout_width="0dp"
