--- a/Retofit2/app/src/main/res/layout/review_image_item.xml
+++ b/Retofit2/app/src/main/res/layout/review_image_item.xml
@@ -3,4 +3,4 @@
     android:layout_width="100dp"
     android:layout_height="100dp"
     android:layout_marginEnd="8dp"
-    android:scaleType="centerCrop" />
+    android:scaleType="fitCenter" />
